--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cron": "^2.4.3",
     "express": "^4.18.2",
-    "node-cron": "^3.0.2",
     "winston": "^3.10.0"
   }
 }
