--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "cron": "^2.4.3",
-    "express": "^4.18.2",
-    "winston": "^3.10.0"
+    "express": "^4.18.2"
   }
 }
